refactor: reorganizar pacotes de DTOs para melhor estruturação e clareza