@@ -1,28 +1,31 @@
-package com.jonathamjtm.gestaoartistas.dto;
+package com.jonathamjtm.gestaoartistas.dto.response;
 
 import com.jonathamjtm.gestaoartistas.entity.Album;
 import com.jonathamjtm.gestaoartistas.entity.Artist;
+import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
+@NoArgsConstructor
+@AllArgsConstructor
 public class AlbumResponse {
+
     private Long id;
     private String title;
     private Integer releaseYear;
-    private List<String> artistNames;
-    private List<String> coverUrls;
+    private List<Long> artistIds;
 
     public AlbumResponse(Album album) {
         this.id = album.getId();
         this.title = album.getTitle();
         this.releaseYear = album.getReleaseYear();
-        this.artistNames = album.getArtists().stream()
-                .map(Artist::getName)
-                .collect(Collectors.toList());
-        this.coverUrls = new ArrayList<>();
+        if (album.getArtists() != null) {
+            this.artistIds = album.getArtists().stream()
+                    .map(Artist::getId)
+                    .toList();
+        }
     }
 }
